objects/Cloud_Demand_Partner_Service_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Cloud_Demand_Model__c</fullName>
        <label>Cloud Demand Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Demand_Offer__c</fullName>
        <label>Cloud Demand Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Demand_Partner_BE_ID__c</fullName>
        <description>Cloud Demand Partner BE ID</description>
        <label>Cloud Demand Partner BE ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Demand_Partner__c</fullName>
        <label>Cloud Demand Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Demand_Proxy__c</fullName>
        <label>Cloud Demand Proxy</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Demand_Units__c</fullName>
        <label>Cloud Demand Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cloud Demand Partner Service Offer</label>
    <nameField>
        <label>Cloud Demand Partner Service Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Demand Partner Service Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cloud_Demand_Partner__c</columns>
        <columns>Cloud_Demand_Model__c</columns>
        <columns>Cloud_Demand_Offer__c</columns>
        <columns>Cloud_Demand_Proxy__c</columns>
        <columns>Cloud_Demand_Units__c</columns>
        <columns>Cloud_Demand_Partner_BE_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>